--- a/main.tex
+++ b/main.tex
@@ -4,9 +4,6 @@
 \usepackage[brazil]{babel}
 \usepackage[colorlinks]{hyperref}
 \usepackage{amssymb}
-\usepackage{graphicx}
-\usepackage{color}
-\usepackage{titlesec}
 \usepackage{fancyhdr}
 \usepackage{enumitem}
 \newlist{todolist}{itemize}{2}
@@ -14,7 +11,7 @@
 \usepackage{pifont}
 \newcommand{\cmark}{\ding{51}}
 \newcommand{\xmark}{\ding{55}}
-\newcommand{\done}{\rlap{$\square$}{\raisebox{2pt}{\large\hspace{1pt}\cmark}}%
+\newcommand{\done}{\rlap{$\square$}{\raisebox{2pt}{\large\hspace{1pt}\cmark}}
 \hspace{-2.5pt}}
 \newcommand{\wontfix}{\rlap{$\square$}{\large\hspace{1pt}\xmark}}
 
@@ -39,54 +36,47 @@
 \end{itemize}
 
 \begin{itemize}
-  \item Qual o problema com a seleção de métodos de análise de risco em pequenas empresas?
-  \begin{todolist}
-  \item[\done] Muitas vezes, as pequenas empresas escolhem métodos inadequados, o que resulta em análises de risco deficientes.
-  \end{todolist}
+    \item Qual o problema com a seleção de métodos de análise de risco em pequenas empresas?
+    \begin{todolist}
+    \item[\done] Muitas vezes, as pequenas empresas escolhem métodos inadequados, o que resulta em análises de riscos deficientes.     
+    \end{todolist}
 \end{itemize}
-
 \begin{itemize}
-  \item Como uma estratégia adequada de análise de risco pode ajudar?
-  \begin{todolist}
-  \item[\done] Uma estratégia adequada pode ajudar as pequenas empresas a escolher o método de análise de risco mais adequado às suas necessidades.
-  \end{todolist}
+    \item Como uma estratégia adequada de análise de risco pode ajudar?
+    \begin{todolist}
+    \item[\done] Uma estratégia adequada pode ajudar as pequenas empresas a escolher o método de análise de risco mais adequado às suas necessidades.     
+    \end{todolist}
 \end{itemize}
-
-\begin{itemize}
-  \item Quantos métodos de análise de risco existem?
-  \begin{todolist}
-  \item[\done] Existem muitos métodos de análise de risco disponíveis, cada um com suas características e finalidades específicas.
-  \end{todolist}
-\end{itemize}
-
+\begin{todolist}
+    \item Quantos métodos de análise de risco existem?
+    \begin{todolist}
+    \item[\done] Existem muitos métodos de análise de riscos disponíveis, cada um com suas características e finalidades específicas.     
+    \end{todolist}
+\end{todolist}
 \begin{itemize}
     \item Qual a melhor maneira de escolher entre os métodos de análise de risco?
     \begin{todolist}
-        \item[\done] A melhor maneira é compará-los com base em critérios como abordagem, nível de conhecimento necessário, parâmetros de entrada e resultado.
+    \item[\done] A melhor maneira é compará-los com base em critérios como abordagem, nível de conhecimento necessário, parâmetros de entrada e resultado. 
     \end{todolist}
 \end{itemize}
-
 \begin{itemize}
     \item Qual o benefício de usar critérios objetivos na comparação de métodos?
     \begin{todolist}
-        \item[\done] Permite que as empresas comparem diferentes metodologias de forma imparcial e tomem uma decisão mais informada sobre qual a melhor. 
+    \item[\done] Permite que as empresas comparem diferentes metodologias de forma imparcial e tomem uma decisão mais informada sobre qual a melhor.     
     \end{todolist}
 \end{itemize}
-
-
 \begin{itemize}
     \item Qual a importância da análise de risco na gestão de negócios?
     \begin{todolist}
-        \item[\done] A análise de risco é crucial para identificar e avaliar os riscos que podem afetar o sucesso de uma organização. 
+    \item[\done] A análise de risco é crucial para identificar e avaliar os riscos que podem afetar o sucesso de uma organização.     
     \end{todolist}
 \end{itemize}
-
-
 \begin{itemize}
     \item Quantas metodologias de análise de risco existem?
     \begin{todolist}
-        \item[\done] Existem diversas metodologias disponíveis, cada uma com suas características e vantagens. 
+    \item[\done] Existem diversas metodologias disponíveis, cada uma com suas características e vantagens.     
     \end{todolist}
 \end{itemize}
-
+\section*{Referência}
+AGRAWAL, Vivel. A Comparative Study on Information Security Risk Analysis Methods. J. Comput., v. 12, n. 1, p. 57-67, 2017.
 \end{document}
