--- a/main.tex
+++ b/main.tex
@@ -47,12 +47,12 @@
     \item[\done] Uma estratégia adequada pode ajudar as pequenas empresas a escolher o método de análise de risco mais adequado às suas necessidades.     
     \end{todolist}
 \end{itemize}
-\begin{todolist}
+\begin{itemize}
     \item Quantos métodos de análise de risco existem?
     \begin{todolist}
     \item[\done] Existem muitos métodos de análise de riscos disponíveis, cada um com suas características e finalidades específicas.     
     \end{todolist}
-\end{todolist}
+\end{itemize}
 \begin{itemize}
     \item Qual a melhor maneira de escolher entre os métodos de análise de risco?
     \begin{todolist}
